--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,5 +72,8 @@
     "typeinfo": "cpp",
     "valarray": "cpp"
   },
-  "cmake.configureOnOpen": true
+  "cmake.configureOnOpen": true,
+  "cSpell.words": [
+    "lineptr"
+  ]
 }
