implement In-Memory, Append-Only, Single-Table Database

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,5 +75,9 @@
   "cmake.configureOnOpen": true,
   "cSpell.words": [
     "lineptr"
+  ],
+  "C_Cpp.codeAnalysis.clangTidy.checks.disabled": [
+    "cppcoreguidelines-avoid-magic-numbers",
+    "clang-analyzer-security.insecureAPI.DeprecatedOrUnsafeBufferHandling"
   ]
 }
