--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,12 +3,14 @@
   "runner": "terminal",
   "type": "shell",
   "echoCommand": true,
-  "presentation": { "reveal": "always" },
+  "presentation": {
+    "reveal": "always"
+  },
   "tasks": [
     //C++ 컴파일
     {
-      "label": "save and compile for C++",
-      "command": "g++",
+      "label": "save and compile for C/C++",
+      "command": "C:/mingw64/bin/g++.exe",
       "args": [
         "${file}",
         "-g",
@@ -16,70 +18,13 @@
         "${fileDirname}/${fileBasenameNoExtension}"
       ],
       "group": "build",
-
       //컴파일시 에러를 편집기에 반영
       //참고:   https://code.visualstudio.com/docs/editor/tasks#_defining-a-problem-matcher
-
       "problemMatcher": {
-        "fileLocation": ["relative", "${workspaceRoot}"],
-        "pattern": {
-          // The regular expression.
-          //Example to match: helloWorld.c:5:3: warning: implicit declaration of function 'prinft'
-          "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning error):\\s+(.*)$",
-          "file": 1,
-          "line": 2,
-          "column": 3,
-          "severity": 4,
-          "message": 5
-        }
-      }
-    },
-    //C 컴파일
-    {
-      "label": "save and compile for C",
-      "command": "gcc",
-      "args": [
-        "${file}",
-        "-g",
-        "-o",
-        "${fileDirname}/${fileBasenameNoExtension}"
-      ],
-      "group": "build",
-
-      //컴파일시 에러를 편집기에 반영
-      //참고:   https://code.visualstudio.com/docs/editor/tasks#_defining-a-problem-matcher
-
-      "problemMatcher": {
-        "fileLocation": ["relative", "${workspaceRoot}"],
-        "pattern": {
-          // The regular expression.
-          //Example to match: helloWorld.c:5:3: warning: implicit declaration of function 'prinft'
-          "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning error):\\s+(.*)$",
-          "file": 1,
-          "line": 2,
-          "column": 3,
-          "severity": 4,
-          "message": 5
-        }
-      }
-    },
-    //C++ 컴파일
-    {
-      "label": "compile for C++",
-      "command": "cd ${fileDirname} && cmake . -G \"MinGW Makefiles\" && mingw32-make",
-      "args": [
-        "${fileDirname}/*.cpp",
-        "-g",
-        "-o",
-        "${fileDirname}/${fileBasenameNoExtension}"
-      ],
-      "group": "build",
-
-      //컴파일시 에러를 편집기에 반영
-      //참고:   https://code.visualstudio.com/docs/editor/tasks#_defining-a-problem-matcher
-
-      "problemMatcher": {
-        "fileLocation": ["relative", "${workspaceRoot}"],
+        "fileLocation": [
+          "relative",
+          "${workspaceRoot}"
+        ],
         "pattern": {
           // The regular expression.
           //Example to match: helloWorld.c:5:3: warning: implicit declaration of function 'prinft'
@@ -103,7 +48,10 @@
       "label": "execute",
       "command": "cmd",
       "group": "test",
-      "args": ["/C", "${fileDirname}\\${fileBasenameNoExtension}"]
+      "args": [
+        "/C",
+        "${fileDirname}\\${fileBasenameNoExtension}"
+      ]
     }
   ]
 }
