updete settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,7 +77,12 @@
     "lineptr"
   ],
   "C_Cpp.codeAnalysis.clangTidy.checks.disabled": [
-    "cppcoreguidelines-avoid-magic-numbers",
+    "cppcoreguidelines-avoid-*",
+    "cppcoreguidelines-pro-bounds-array-to-pointer-decay",
+    "cppcoreguidelines-pro-type-vararg",
+    "readability-braces-around-statements",
+    "readability-convert-member-functions-to-static",
+    "readability-implicit-bool-conversion",
     "clang-analyzer-security.insecureAPI.DeprecatedOrUnsafeBufferHandling"
   ]
 }
